--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ public/dist/
 .env.test
 .env.development
 firebase-rule.json
+Screenshot from 2021-03-02 14-39-26.png
+Screenshot from 2021-03-02 14-39-31.png
+app logic.odg
